--- a/translations/translation_cz.xml
+++ b/translations/translation_cz.xml
@@ -255,7 +255,7 @@
 		<text name="COURSEPLAY_CONVOY_MIN_DISTANCE"						 	text="minimální odstup" /> 
 		<text name="COURSEPLAY_COMBINE_IN_FRUIT"							text="vysýpací roura v neposekaném" />
 		<text name="COURSEPLAY_MODESPECIFIC_SETTINGS"						text="nastavení specifického režimu" /> 
-    <text name="COURSEPLAY_KEEP_CURRENT_STEERING" 			    text="Udržet aktualní nastavení řízení" />
+    	<text name="COURSEPLAY_KEEP_CURRENT_STEERING" 			    text="Udržet aktualní nastavení řízení" />
 		<text name="COURSEPLAY_KEEP_CURRENT_STEERING_TOOLTIP "		text="Courseplay nezmění aktuální nastavení krabího řízení vozidla" />
 
 		<!-- shovel stuff -->
@@ -349,35 +349,73 @@
 		<text name="COURSEPLAY_HUD_OPEN" 									text="Zobrazit Courseplay HUD" />
 		<text name="COURSEPLAY_HUD_CLOSE" 									text="Skrýt Courseplay HUD" />
 		<text name="COURSEPLAY_FUNCTIONS" 									text="Funkce Courseplay" />
-		<text name="input_COURSEPLAY_MODIFIER" 								text="Courseplay: úprava" />
-		<text name="input_COURSEPLAY_MENU_ACCEPT_SECONDARY" 				text="Courseplay: vedlejší menu povoleno" />
-		<text name="input_COURSEPLAY_HUD" 									text="Zobrazit/skrýt Courseplay HUD" />
-		<text name="input_COURSEPLAY_START_STOP" 							text="Courseplay: aktivovat/zastavit odvozce" />
-		<text name="input_COURSEPLAY_CANCELWAIT" 							text="Courseplay: pokračovat" />
-		<text name="input_COURSEPLAY_DRIVENOW" 								text="Courseplay: odvézt bez čekání na doplnění" />
-		<text name="input_COURSEPLAY_STOP_AT_END" 							text="Courseplay: čekat na posledním bodě nebo triggeru" />
-		<text name="input_COURSEPLAY_NEXTMODE" 								text="Courseplay: další mód" />
-		<text name="input_COURSEPLAY_PREVMODE" 								text="Courseplay: předchozí mód" />
-		<text name="input_COURSEPLAY_MOUSEACTION_PRIMARY" 					text="Courseplay: myš akce" />
-		<text name="input_COURSEPLAY_MOUSEACTION_SECONDARY" 				text="Courseplay: myš sekundární akce" />
-		<text name="input_COURSEPLAY_DEBUG_MARKER"			 				text="Courseplay: umístit ladicí značku do protokolu" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_LOADING_POSITION" 		text="Pohyb lžíce do pozice k nakládání" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_TRANSPORT_POSITION" 	text="Pohyb lžíce do pozice k převozu" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_PRE_UNLOADING_POSITION" text="Pohyb lžíce do pozice k vykládání" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_UNLOADING_POSITION" 	text="Pohyb lžíce do pozice k vykládání" />
+
+		<!--Action Events-->
+		<!--HUD-->
+		<text name="input_COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 				text="Courseplay: open/close HUD" />
+		<text name="input_COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 				text="Courseplay: next mode" />
+		<text name="input_COURSEPLAY_ACTION_PREVIOUS_DRIVER_MODE" 			text="Courseplay: previous mode" />
+		<text name="input_COURSEPLAY_ACTION_NEXT_HUD_PAGE"		 			text="Courseplay: next page" />
+		<text name="input_COURSEPLAY_ACTION_PREVIOUS_HUD_PAGE" 				text="Courseplay: previous page" />
+		<text name="input_COURSEPLAY_ACTION_CHANGE_STARTING_POINT" 			text="Courseplay: change starting point" />
+		<text name="COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 						text="Courseplay: open/close HUD" />
+		<text name="COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 					text="Courseplay: next mode" />
+		<text name="COURSEPLAY_ACTION_PREVIOUS_DRIVER_MODE" 				text="Courseplay: previous mode" />
+		<text name="COURSEPLAY_ACTION_NEXT_HUD_PAGE"		 				text="Courseplay: next page" />
+		<text name="COURSEPLAY_ACTION_PREVIOUS_HUD_PAGE" 					text="Courseplay: previous page" />
+		<text name="COURSEPLAY_ACTION_CHANGE_STARTING_POINT" 				text="Courseplay: change starting point" />
+		<!--Recording/Driving-->
+		<text name="input_COURSEPLAY_ACTION_START_STOP_RECORDING" 			text="Courseplay: start/stop recording" />
+		<text name="input_COURSEPLAY_ACTION_PAUSE_RECORDING" 				text="Courseplay: pause recording" />
+		<text name="input_COURSEPLAY_ACTION_TOGGLE_REVERSE_RECORDING" 		text="Courseplay: toggle reverse recording" />
+		<text name="input_COURSEPLAY_ACTION_START_STOP_DRIVING"				text="Courseplay: start/stop driver" />
+		<text name="input_COURSEPLAY_ACTION_DRIVE_NOW"						text="Courseplay: drive now" />
+		<text name="COURSEPLAY_ACTION_START_STOP_RECORDING" 				text="Courseplay: start/stop recording" />
+		<text name="COURSEPLAY_ACTION_PAUSE_RECORDING" 						text="Courseplay: pause recording" />
+		<text name="COURSEPLAY_ACTION_TOGGLE_REVERSE_RECORDING" 			text="Courseplay: toggle reverse recording" />
+		<text name="COURSEPLAY_ACTION_START_STOP_DRIVING"					text="Courseplay: start/stop driver" />
+		<text name="COURSEPLAY_ACTION_DRIVE_NOW"							text="Courseplay: drive now" />
+		<!--Shovel-->
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_LOADING_POSITION"	text="CP Shovel: Save loading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_LOADING_POSITION"	text="CP Shovel: Move to loading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_TRANSPORT_POSITION"		text="CP Shovel: Save transport position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_TRANSPORT_POSITION"		text="CP Shovel: Move to transport position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_PRE_UNLOADING_POSITION"		text="CP Shovel: Save pre-unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_PRE_UNLOADING_POSITION"		text="CP Shovel: Move pre-unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"	text="CP Shovel: Save unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"	text="CP Shovel: Move to unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_LOADING_POSITION"			text="CP Shovel: Save loading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_LOADING_POSITION"			text="CP Shovel: Move to loading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_TRANSPORT_POSITION"		text="CP Shovel: Save transport position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_TRANSPORT_POSITION"		text="CP Shovel: Move to transport position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_PRE_UNLOADING_POSITION"	text="CP Shovel: Save pre-unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_PRE_UNLOADING_POSITION"	text="CP Shovel: Move pre-unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"		text="CP Shovel: Save unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"		text="CP Shovel: Move to unloading position" />
+		<!--Editor-->
+		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Toggle course editor" />
+		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: Undo last course edit" />
+		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: Save course changes" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: Increase waypoint speed" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: Decrease waypoint speed" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Delete waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Delete next waypoint" />  
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Delete all waypoints to start" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Delete all waypoints to end" />
+		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Insert waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Change waypoint type" />
+		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Courseplay Editor: Toggle course editor" />
+		<text name="COURSEPLAY_EDITOR_UNDO"									text="Courseplay Editor: Undo last course edit" />
+		<text name="COURSEPLAY_EDITOR_SAVE"									text="Courseplay Editor: Save course changes" />
+		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Courseplay Editor: Increase waypoint speed" />
+		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Courseplay Editor: Decrease waypoint speed" />
+		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: Delete waypoint" />
+		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Courseplay Editor: Delete next waypoint" />  
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: Delete all waypoints to start" />
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: Delete all waypoints to end" />
+		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: Insert waypoint" />
+		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Courseplay Editor: Change waypoint type" />
 		
-		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Přepnout do editoru tras" />
-		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: Vrátit zpět poslední úpravy" />
-		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: Uložit změny tras" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: Zvýšení rychlosti trasového bodu" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: Snížení rychlosti trasového bodu" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Smazat trasový bod" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Smazat následující trasový bod" />  
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Smazat všechny body po start" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Smazat všechny body po konec" />
-		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Vložit trasový bod" />
-		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Změnit typ trasového bodu" />
-		<text name="input_COURSEPLAY_TOGGLE_FERTILIZER"						text="CP: Přihnojování secím strojem" />
 		<text name="COURSEPLAY_EDITOR_NORMAL" 								text="Normální" />
 		<text name="COURSEPLAY_EDITOR_WAIT" 								text="Čekat" />
 		<text name="COURSEPLAY_EDITOR_CROSSING" 							text="Křížení" />
