--- a/translations/translation_es.xml
+++ b/translations/translation_es.xml
@@ -349,35 +349,73 @@
 		<text name="COURSEPLAY_HUD_OPEN" 									text="Mostrar ventana de Courseplay" />
 		<text name="COURSEPLAY_HUD_CLOSE" 									text="Ocultar ventana de Courseplay" />
 		<text name="COURSEPLAY_FUNCTIONS" 									text="Funciones de Courseplay" />
-		<text name="input_COURSEPLAY_MODIFIER" 								text="Courseplay: modificador" />
-		<text name="input_COURSEPLAY_MENU_ACCEPT_SECONDARY" 				text="Courseplay: aceptar en el menú secundario" />
-		<text name="input_COURSEPLAY_HUD" 									text="Mostrar/ocultar ventana de Courseplay" />
-		<text name="input_COURSEPLAY_START_STOP" 							text="Courseplay: conducir/detener ruta" />
-		<text name="input_COURSEPLAY_CANCELWAIT" 							text="Courseplay: continuar" />
-		<text name="input_COURSEPLAY_DRIVENOW" 								text="Courseplay: conducir ahora" />
-		<text name="input_COURSEPLAY_STOP_AT_END" 							text="Courseplay: parar en último punto o siguiente trigger" />
-		<text name="input_COURSEPLAY_NEXTMODE" 								text="Courseplay: modo siguiente" />
-		<text name="input_COURSEPLAY_PREVMODE" 								text="Courseplay: modo anterior" />
-		<text name="input_COURSEPLAY_MOUSEACTION_PRIMARY" 					text="Courseplay: acción del ratón" />
-		<text name="input_COURSEPLAY_MOUSEACTION_SECONDARY" 				text="Courseplay: acción secundaria del ratón" />
-		<text name="input_COURSEPLAY_DEBUG_MARKER"			 				text="Courseplay: colocar marcador de depuración en el log" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_LOADING_POSITION" 		text="Courseplay: mover pala a posición de carga" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_TRANSPORT_POSITION" 	text="Courseplay: mover pala a posición de transporte" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_PRE_UNLOADING_POSITION"	text="Courseplay: mover pala a posición de pre-descarga" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_UNLOADING_POSITION" 	text="Courseplay: mover pala a posición de descarga" />
+
+		<!--Action Events-->
+		<!--HUD-->
+		<text name="input_COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 				text="Courseplay: open/close HUD" />
+		<text name="input_COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 				text="Courseplay: next mode" />
+		<text name="input_COURSEPLAY_ACTION_PREVIOUS_DRIVER_MODE" 			text="Courseplay: previous mode" />
+		<text name="input_COURSEPLAY_ACTION_NEXT_HUD_PAGE"		 			text="Courseplay: next page" />
+		<text name="input_COURSEPLAY_ACTION_PREVIOUS_HUD_PAGE" 				text="Courseplay: previous page" />
+		<text name="input_COURSEPLAY_ACTION_CHANGE_STARTING_POINT" 			text="Courseplay: change starting point" />
+		<text name="COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 						text="Courseplay: open/close HUD" />
+		<text name="COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 					text="Courseplay: next mode" />
+		<text name="COURSEPLAY_ACTION_PREVIOUS_DRIVER_MODE" 				text="Courseplay: previous mode" />
+		<text name="COURSEPLAY_ACTION_NEXT_HUD_PAGE"		 				text="Courseplay: next page" />
+		<text name="COURSEPLAY_ACTION_PREVIOUS_HUD_PAGE" 					text="Courseplay: previous page" />
+		<text name="COURSEPLAY_ACTION_CHANGE_STARTING_POINT" 				text="Courseplay: change starting point" />
+		<!--Recording/Driving-->
+		<text name="input_COURSEPLAY_ACTION_START_STOP_RECORDING" 			text="Courseplay: start/stop recording" />
+		<text name="input_COURSEPLAY_ACTION_PAUSE_RECORDING" 				text="Courseplay: pause recording" />
+		<text name="input_COURSEPLAY_ACTION_TOGGLE_REVERSE_RECORDING" 		text="Courseplay: toggle reverse recording" />
+		<text name="input_COURSEPLAY_ACTION_START_STOP_DRIVING"				text="Courseplay: start/stop driver" />
+		<text name="input_COURSEPLAY_ACTION_DRIVE_NOW"						text="Courseplay: drive now" />
+		<text name="COURSEPLAY_ACTION_START_STOP_RECORDING" 				text="Courseplay: start/stop recording" />
+		<text name="COURSEPLAY_ACTION_PAUSE_RECORDING" 						text="Courseplay: pause recording" />
+		<text name="COURSEPLAY_ACTION_TOGGLE_REVERSE_RECORDING" 			text="Courseplay: toggle reverse recording" />
+		<text name="COURSEPLAY_ACTION_START_STOP_DRIVING"					text="Courseplay: start/stop driver" />
+		<text name="COURSEPLAY_ACTION_DRIVE_NOW"							text="Courseplay: drive now" />
+		<!--Shovel-->
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_LOADING_POSITION"	text="CP Shovel: Save loading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_LOADING_POSITION"	text="CP Shovel: Move to loading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_TRANSPORT_POSITION"		text="CP Shovel: Save transport position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_TRANSPORT_POSITION"		text="CP Shovel: Move to transport position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_PRE_UNLOADING_POSITION"		text="CP Shovel: Save pre-unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_PRE_UNLOADING_POSITION"		text="CP Shovel: Move pre-unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"	text="CP Shovel: Save unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"	text="CP Shovel: Move to unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_LOADING_POSITION"			text="CP Shovel: Save loading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_LOADING_POSITION"			text="CP Shovel: Move to loading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_TRANSPORT_POSITION"		text="CP Shovel: Save transport position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_TRANSPORT_POSITION"		text="CP Shovel: Move to transport position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_PRE_UNLOADING_POSITION"	text="CP Shovel: Save pre-unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_PRE_UNLOADING_POSITION"	text="CP Shovel: Move pre-unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"		text="CP Shovel: Save unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"		text="CP Shovel: Move to unloading position" />
+		<!--Editor-->
+		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Toggle course editor" />
+		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: Undo last course edit" />
+		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: Save course changes" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: Increase waypoint speed" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: Decrease waypoint speed" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Delete waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Delete next waypoint" />  
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Delete all waypoints to start" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Delete all waypoints to end" />
+		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Insert waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Change waypoint type" />
+		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Courseplay Editor: Toggle course editor" />
+		<text name="COURSEPLAY_EDITOR_UNDO"									text="Courseplay Editor: Undo last course edit" />
+		<text name="COURSEPLAY_EDITOR_SAVE"									text="Courseplay Editor: Save course changes" />
+		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Courseplay Editor: Increase waypoint speed" />
+		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Courseplay Editor: Decrease waypoint speed" />
+		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: Delete waypoint" />
+		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Courseplay Editor: Delete next waypoint" />  
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: Delete all waypoints to start" />
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: Delete all waypoints to end" />
+		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: Insert waypoint" />
+		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Courseplay Editor: Change waypoint type" />
 		
-		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: activar editor de ruta" />
-		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: deshacer última modificación" />
-		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: guardar cambios" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: aumentar velocidad en punto de ruta" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: disminuir velocidad en punto de ruta" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: eliminar punto de ruta" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: eliminar siguiente punto de ruta" />  
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: eliminar todos los puntos de ruta desde el principio" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: eliminar todos los puntos de ruta hasta el final" />
-		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: insertar punto de ruta" />
-		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: cambiar tipo de punto de ruta" />
-		<text name="input_COURSEPLAY_TOGGLE_FERTILIZER"						text="CP: fertilizante de sembradora" />
 		<text name="COURSEPLAY_EDITOR_NORMAL" 								text="Normal" />
 		<text name="COURSEPLAY_EDITOR_WAIT" 								text="Pausa" />
 		<text name="COURSEPLAY_EDITOR_CROSSING" 							text="Cruce" />
