--- a/translations/translation_fr.xml
+++ b/translations/translation_fr.xml
@@ -348,35 +348,71 @@
     <text name="COURSEPLAY_HUD_OPEN" 						 			text="Montrer la fenêtre du Courseplay" />
     <text name="COURSEPLAY_HUD_CLOSE" 						 			text="Cacher la fenêtre du Courseplay" />
     <text name="COURSEPLAY_FUNCTIONS" 						 			text="Fonctions du Courseplay" />
-    <text name="input_COURSEPLAY_MODIFIER" 					 			text="Courseplay: modificateur" />
-    <text name="input_COURSEPLAY_MENU_ACCEPT_SECONDARY" 				text="Courseplay: Accepter les menus secondaires" />
-    <text name="input_COURSEPLAY_HUD" 						 			text="Courseplay: Montrer/cacher l'interface" />
-    <text name="input_COURSEPLAY_START_STOP" 				 			text="Courseplay: Démarrer/arrêter la course" />
-    <text name="input_COURSEPLAY_CANCELWAIT" 				 			text="Courseplay: Continuer" />
-    <text name="input_COURSEPLAY_DRIVENOW" 					 			text="Courseplay: Démarrer maintenant" />
-    <text name="input_COURSEPLAY_STOP_AT_END" 				 			text="Courseplay: Arrêter au prochain point ou trigger" />
-    <text name="input_COURSEPLAY_NEXTMODE" 					 			text="Courseplay: Mode suivant" />
-    <text name="input_COURSEPLAY_PREVMODE" 					 			text="Courseplay: Mode précédent" />
-    <text name="input_COURSEPLAY_MOUSEACTION_PRIMARY" 					text="Courseplay: Action de la souris" />
-    <text name="input_COURSEPLAY_MOUSEACTION_SECONDARY"					text="Courseplay: Action secondaire de la souris" />
-    <text name="input_COURSEPLAY_DEBUG_MARKER"			 				text="Courseplay: Placer un marqueur de débogage dans le journal" />
-    <text name="input_COURSEPLAY_SHOVEL_MOVE_TO_LOADING_POSITION" 		text="Courseplay: Se mettre en position de chargement" />
-    <text name="input_COURSEPLAY_SHOVEL_MOVE_TO_TRANSPORT_POSITION" 	text="Courseplay: Se mettre en position de transport" />
-    <text name="input_COURSEPLAY_SHOVEL_MOVE_TO_PRE_UNLOADING_POSITION"	text="Courseplay: Se mettre en position de pre-déchargement" />
-    <text name="input_COURSEPLAY_SHOVEL_MOVE_TO_UNLOADING_POSITION" 	text="Courseplay: Se mettre en position de déchargement" />
-  	
-    <text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Éditeur Courseplay: Activer l'éditeur de course" />
-    <text name="input_COURSEPLAY_EDITOR_UNDO"							text="Éditeur Courseplay: Annuler la dernière modification" />
-    <text name="input_COURSEPLAY_EDITOR_SAVE"							text="Éditeur Courseplay: Sauvegarder les modifications" />
-    <text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Éditeur Courseplay: Augmenter la vitesse du point" />
-    <text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Éditeur Courseplay: Réduire la vitesse du point" />
-    <text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Éditeur Courseplay: Supprimer le point" />
-    <text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Éditeur Courseplay: Supprimer le point suivant" />  
-    <text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Éditeur Courseplay: Supprimer les points depuis le début" />
-    <text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Éditeur Courseplay: Supprimer les points jusqu'à la fin" />
-    <text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Éditeur Courseplay: Insérer un point" />
-    <text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Éditeur Courseplay: Changer le type de point" />
-    <text name="input_COURSEPLAY_TOGGLE_FERTILIZER"						text="CP: Fertilisation au semis" />
+
+    <!--Action Events-->
+	<!--HUD-->
+	<text name="input_COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 				text="Courseplay: open/close HUD" />
+	<text name="input_COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 				text="Courseplay: next mode" />
+	<text name="input_COURSEPLAY_ACTION_PREVIOUS_DRIVER_MODE" 			text="Courseplay: previous mode" />
+	<text name="input_COURSEPLAY_ACTION_NEXT_HUD_PAGE"		 			text="Courseplay: next page" />
+	<text name="input_COURSEPLAY_ACTION_PREVIOUS_HUD_PAGE" 				text="Courseplay: previous page" />
+	<text name="input_COURSEPLAY_ACTION_CHANGE_STARTING_POINT" 			text="Courseplay: change starting point" />
+	<text name="COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 						text="Courseplay: open/close HUD" />
+	<text name="COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 					text="Courseplay: next mode" />
+	<text name="COURSEPLAY_ACTION_PREVIOUS_DRIVER_MODE" 				text="Courseplay: previous mode" />
+	<text name="COURSEPLAY_ACTION_NEXT_HUD_PAGE"		 				text="Courseplay: next page" />
+	<text name="COURSEPLAY_ACTION_PREVIOUS_HUD_PAGE" 					text="Courseplay: previous page" />
+	<text name="COURSEPLAY_ACTION_CHANGE_STARTING_POINT" 				text="Courseplay: change starting point" />
+	<!--Recording/Driving-->
+	<text name="input_COURSEPLAY_ACTION_START_STOP_RECORDING" 			text="Courseplay: start/stop recording" />
+	<text name="input_COURSEPLAY_ACTION_PAUSE_RECORDING" 				text="Courseplay: pause recording" />
+	<text name="input_COURSEPLAY_ACTION_TOGGLE_REVERSE_RECORDING" 		text="Courseplay: toggle reverse recording" />
+	<text name="input_COURSEPLAY_ACTION_START_STOP_DRIVING"				text="Courseplay: start/stop driver" />
+	<text name="input_COURSEPLAY_ACTION_DRIVE_NOW"						text="Courseplay: drive now" />
+	<text name="COURSEPLAY_ACTION_START_STOP_RECORDING" 				text="Courseplay: start/stop recording" />
+	<text name="COURSEPLAY_ACTION_PAUSE_RECORDING" 						text="Courseplay: pause recording" />
+	<text name="COURSEPLAY_ACTION_TOGGLE_REVERSE_RECORDING" 			text="Courseplay: toggle reverse recording" />
+	<text name="COURSEPLAY_ACTION_START_STOP_DRIVING"					text="Courseplay: start/stop driver" />
+	<text name="COURSEPLAY_ACTION_DRIVE_NOW"							text="Courseplay: drive now" />
+	<!--Shovel-->
+	<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_LOADING_POSITION"	text="CP Shovel: Save loading position" />
+	<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_LOADING_POSITION"	text="CP Shovel: Move to loading position" />
+	<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_TRANSPORT_POSITION"		text="CP Shovel: Save transport position" />
+	<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_TRANSPORT_POSITION"		text="CP Shovel: Move to transport position" />
+	<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_PRE_UNLOADING_POSITION"		text="CP Shovel: Save pre-unloading position" />
+	<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_PRE_UNLOADING_POSITION"		text="CP Shovel: Move pre-unloading position" />
+	<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"	text="CP Shovel: Save unloading position" />
+	<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"	text="CP Shovel: Move to unloading position" />
+	<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_LOADING_POSITION"			text="CP Shovel: Save loading position" />
+	<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_LOADING_POSITION"			text="CP Shovel: Move to loading position" />
+	<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_TRANSPORT_POSITION"		text="CP Shovel: Save transport position" />
+	<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_TRANSPORT_POSITION"		text="CP Shovel: Move to transport position" />
+	<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_PRE_UNLOADING_POSITION"	text="CP Shovel: Save pre-unloading position" />
+	<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_PRE_UNLOADING_POSITION"	text="CP Shovel: Move pre-unloading position" />
+	<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"		text="CP Shovel: Save unloading position" />
+	<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"		text="CP Shovel: Move to unloading position" />
+	<!--Editor-->
+	<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Toggle course editor" />
+	<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: Undo last course edit" />
+	<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: Save course changes" />
+	<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: Increase waypoint speed" />
+	<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: Decrease waypoint speed" />
+	<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Delete waypoint" />
+	<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Delete next waypoint" />  
+	<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Delete all waypoints to start" />
+	<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Delete all waypoints to end" />
+	<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Insert waypoint" />
+	<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Change waypoint type" />
+	<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Courseplay Editor: Toggle course editor" />
+	<text name="COURSEPLAY_EDITOR_UNDO"									text="Courseplay Editor: Undo last course edit" />
+	<text name="COURSEPLAY_EDITOR_SAVE"									text="Courseplay Editor: Save course changes" />
+	<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Courseplay Editor: Increase waypoint speed" />		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Courseplay Editor: Decrease waypoint speed" />
+	<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: Delete waypoint" />
+	<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Courseplay Editor: Delete next waypoint" />  		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: Delete all waypoints to start" />
+	<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: Delete all waypoints to end" />
+	<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: Insert waypoint" />
+	<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Courseplay Editor: Change waypoint type" />
+
     <text name="COURSEPLAY_EDITOR_NORMAL" 								text="Normal" />
     <text name="COURSEPLAY_EDITOR_WAIT" 								text="Point d'attente" />
     <text name="COURSEPLAY_EDITOR_CROSSING" 							text="Croisement" />
