--- a/translations/translation_hu.xml
+++ b/translations/translation_hu.xml
@@ -13,7 +13,7 @@
 		<text name="COURSEPLAY_UNLOADING_SIDE_NONE" 						text="automatikus" />
 		<text name="COURSEPLAY_LEFT" 										text="bal" />
 		<text name="COURSEPLAY_RIGHT" 										text="jobb" />
-		<text name="COURSEPLAY_CENTER" 										text="közép" /><!-- TODO TRANSLATION   PLEASE DO ALSO TRANSLATE THE moddesc.xml TEXT THANKS-->
+		<text name="COURSEPLAY_CENTER" 										text="közép" />
 		<text name="COURSEPLAY_UNLOADING_DRIVER_SEND_HOME" 					text="Szállító elküldése" />
 		<text name="COURSEPLAY_REQUEST_UNLOADING_DRIVER" 					text="Szállító hívása" />
 		<text name="COURSEPLAY_UNLOADING_DRIVER_REQUESTED" 					text="Szállító hívása" />
@@ -38,7 +38,7 @@
 		<text name="COURSEPLAY_HEADLAND_DIRECTION"							text="Fordulósáv irány"/>
 		<text name="COURSEPLAY_HEADLAND_BEFORE_AFTER"						text="Fordulósáv útvonal elején/végén" />
 		<text name="COURSEPLAY_GENERATE_FIELD_COURSE"						text="Útvonal generálás" />
-		<text name="COURSEPLAY_MULTI_TOOLS"					 				text="Több eszköz" />  <!-- TODO Translation. This is so you can have multiple of the same workwidth tools running the same course -->
+		<text name="COURSEPLAY_MULTI_TOOLS"					 				text="Több eszköz" />
 		<text name="COURSEPLAY_DISTANCE" 									text="Távolság" />
 		<text name="COURSEPLAY_WAITING_TIME" 								text="Várakozási idő" />
 		<text name="COURSEPLAY_MINUTES" 									text="%d perc" />
@@ -115,10 +115,10 @@
 		<text name="COURSEPLAY_PAGE_TITLE_COMBINE_CONTROLS" 				text="Kombájn szabályozás" />
 		<text name="COURSEPLAY_PAGE_TITLE_MANAGE_COURSES" 					text="Útvonal kezelés" />
 		<text name="COURSEPLAY_PAGE_TITLE_CHOOSE_FOLDER" 					text="Mappa választás" />
-		<text name="COURSEPLAY_PAGE_TITLE_COMBI_MODE" 						text="jármű specifikus beállítások" />  <!-- TODO TRANSLATE: -->
+		<text name="COURSEPLAY_PAGE_TITLE_COMBI_MODE" 						text="jármű specifikus beállítások" />
 		<text name="COURSEPLAY_PAGE_TITLE_MANAGE_COMBINES" 					text="Kombájn kezelés" />
 		<text name="COURSEPLAY_PAGE_TITLE_SPEEDS" 							text="Sebességhatár" />
-		<text name="COURSEPLAY_PAGE_TITLE_DRIVING_SETTINGS" 				text="általános vezetési beállítások" />  <!-- TODO TRANSLATE: -->
+		<text name="COURSEPLAY_PAGE_TITLE_DRIVING_SETTINGS" 				text="általános vezetési beállítások" />
 		<text name="COURSEPLAY_PAGE_TITLE_GENERAL_SETTINGS" 				text="Beállitások" />
 		<text name="COURSEPLAY_COMBINE_IS_TURNING" 							text="Kombájn éppen fordul" />
 		<text name="COURSEPLAY_NO_WORK_AREA" 								text="Nincs munkaterülete a vezetőnek" />
@@ -340,49 +340,87 @@
 		<text name="COURSEPLAY_HUD_OPEN" 									text="Vezetősegéd panel megnyitása" />
 		<text name="COURSEPLAY_HUD_CLOSE" 									text="Vezetősegéd panel bezárása" />
 		<text name="COURSEPLAY_FUNCTIONS" 									text="Vezetősegéd funkciók" />
-		<text name="input_COURSEPLAY_MODIFIER" 								text="Vezetősegéd gombkiosztás: Elsődleges" />
-		<text name="input_COURSEPLAY_MENU_ACCEPT_SECONDARY" 				text="Vezetősegéd gombkiosztás: Másodlagos" />
-		<text name="input_COURSEPLAY_HUD" 									text="Vezetősegéd panel be/ki" />
-		<text name="input_COURSEPLAY_START_STOP" 							text="Vezetősegéd: Vezető indítása/leállítása" />
-		<text name="input_COURSEPLAY_CANCELWAIT" 							text="Vezetősegéd: Folytatás" />
-		<text name="input_COURSEPLAY_DRIVENOW" 								text="Vezetősegéd: Indítás azonnal!" />
-		<text name="input_COURSEPLAY_STOP_AT_END" 							text="Vezetősegéd: Állj az utolsó ponton következő triggernél" />
-		<text name="input_COURSEPLAY_NEXTMODE" 								text="Vezetősegéd: Következő művelet" />
-		<text name="input_COURSEPLAY_PREVMODE" 								text="Vezetősegéd: Előző művelet" />
-		<text name="input_COURSEPLAY_MOUSEACTION_PRIMARY" 					text="Vezetősegéd: Egér aktiválás" />
-		<text name="input_COURSEPLAY_MOUSEACTION_SECONDARY" 				text="Vezetősegéd: Másodlagos egér aktiválás" />
-		<text name="input_COURSEPLAY_DEBUG_MARKER"			 				text="Courseplay: place debug marker in log" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_LOADING_POSITION" 		text="Vezetősegéd: Mozgatás a töltési pozícióba" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_TRANSPORT_POSITION"		text="Vezetősegéd: Mozgatás a szállítási pozícióba" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_PRE_UNLOADING_POSITION"	text="Vezetősegéd: Mozgatás a kirakodást előkészítő pozícióba" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_UNLOADING_POSITION"		text="Vezetősegéd: Mozgatás a kirakási pozícióba" />
-		
-   		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Toggle course editor" />
+
+		<!--Action Events-->
+		<!--HUD-->
+		<text name="input_COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 				text="Courseplay: open/close HUD" />
+		<text name="input_COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 				text="Courseplay: next mode" />
+		<text name="input_COURSEPLAY_ACTION_PREVIOUS_DRIVER_MODE" 			text="Courseplay: previous mode" />
+		<text name="input_COURSEPLAY_ACTION_NEXT_HUD_PAGE"		 			text="Courseplay: next page" />
+		<text name="input_COURSEPLAY_ACTION_PREVIOUS_HUD_PAGE" 				text="Courseplay: previous page" />
+		<text name="input_COURSEPLAY_ACTION_CHANGE_STARTING_POINT" 			text="Courseplay: change starting point" />
+		<text name="COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 						text="Courseplay: open/close HUD" />
+		<text name="COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 					text="Courseplay: next mode" />
+		<text name="COURSEPLAY_ACTION_PREVIOUS_DRIVER_MODE" 				text="Courseplay: previous mode" />
+		<text name="COURSEPLAY_ACTION_NEXT_HUD_PAGE"		 				text="Courseplay: next page" />
+		<text name="COURSEPLAY_ACTION_PREVIOUS_HUD_PAGE" 					text="Courseplay: previous page" />
+		<text name="COURSEPLAY_ACTION_CHANGE_STARTING_POINT" 				text="Courseplay: change starting point" />
+		<!--Recording/Driving-->
+		<text name="input_COURSEPLAY_ACTION_START_STOP_RECORDING" 			text="Courseplay: start/stop recording" />
+		<text name="input_COURSEPLAY_ACTION_PAUSE_RECORDING" 				text="Courseplay: pause recording" />
+		<text name="input_COURSEPLAY_ACTION_TOGGLE_REVERSE_RECORDING" 		text="Courseplay: toggle reverse recording" />
+		<text name="input_COURSEPLAY_ACTION_START_STOP_DRIVING"				text="Courseplay: start/stop driver" />
+		<text name="input_COURSEPLAY_ACTION_DRIVE_NOW"						text="Courseplay: drive now" />
+		<text name="COURSEPLAY_ACTION_START_STOP_RECORDING" 				text="Courseplay: start/stop recording" />
+		<text name="COURSEPLAY_ACTION_PAUSE_RECORDING" 						text="Courseplay: pause recording" />
+		<text name="COURSEPLAY_ACTION_TOGGLE_REVERSE_RECORDING" 			text="Courseplay: toggle reverse recording" />
+		<text name="COURSEPLAY_ACTION_START_STOP_DRIVING"					text="Courseplay: start/stop driver" />
+		<text name="COURSEPLAY_ACTION_DRIVE_NOW"							text="Courseplay: drive now" />
+		<!--Shovel-->
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_LOADING_POSITION"	text="CP Shovel: Save loading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_LOADING_POSITION"	text="CP Shovel: Move to loading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_TRANSPORT_POSITION"		text="CP Shovel: Save transport position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_TRANSPORT_POSITION"		text="CP Shovel: Move to transport position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_PRE_UNLOADING_POSITION"		text="CP Shovel: Save pre-unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_PRE_UNLOADING_POSITION"		text="CP Shovel: Move pre-unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"	text="CP Shovel: Save unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"	text="CP Shovel: Move to unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_LOADING_POSITION"			text="CP Shovel: Save loading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_LOADING_POSITION"			text="CP Shovel: Move to loading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_TRANSPORT_POSITION"		text="CP Shovel: Save transport position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_TRANSPORT_POSITION"		text="CP Shovel: Move to transport position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_PRE_UNLOADING_POSITION"	text="CP Shovel: Save pre-unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_PRE_UNLOADING_POSITION"	text="CP Shovel: Move pre-unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"		text="CP Shovel: Save unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"		text="CP Shovel: Move to unloading position" />
+		<!--Editor-->
+		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Toggle course editor" />
 		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: Undo last course edit" />
 		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: Save course changes" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"							text="Courseplay Editor: Increase waypoint speed" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"							text="Courseplay Editor: Decrease waypoint speed" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: Delete waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"						text="Courseplay Editor: Delete next waypoint" />  
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: Delete all waypoints to start" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: Delete all waypoints to end" />
-		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: Insert waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"						text="Courseplay Editor: Change waypoint type" />
-		<text name="input_COURSEPLAY_TOGGLE_FERTILIZER"						text="CP: Fertilizer of seeder" />
-		<text name="COURSEPLAY_EDITOR_NORMAL" 							text="Normal" />
-		<text name="COURSEPLAY_EDITOR_WAIT" 							text="Wait" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: Increase waypoint speed" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: Decrease waypoint speed" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Delete waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Delete next waypoint" />  
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Delete all waypoints to start" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Delete all waypoints to end" />
+		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Insert waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Change waypoint type" />
+		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Courseplay Editor: Toggle course editor" />
+		<text name="COURSEPLAY_EDITOR_UNDO"									text="Courseplay Editor: Undo last course edit" />
+		<text name="COURSEPLAY_EDITOR_SAVE"									text="Courseplay Editor: Save course changes" />
+		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Courseplay Editor: Increase waypoint speed" />
+		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Courseplay Editor: Decrease waypoint speed" />
+		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: Delete waypoint" />
+		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Courseplay Editor: Delete next waypoint" />  
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: Delete all waypoints to start" />
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: Delete all waypoints to end" />
+		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: Insert waypoint" />
+		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Courseplay Editor: Change waypoint type" />
+
+		<text name="COURSEPLAY_EDITOR_NORMAL" 								text="Normal" />
+		<text name="COURSEPLAY_EDITOR_WAIT" 								text="Wait" />
 		<text name="COURSEPLAY_EDITOR_CROSSING" 							text="Crossing" />
-		<text name="COURSEPLAY_EDITOR_UNLOAD" 							text="Unload" />
+		<text name="COURSEPLAY_EDITOR_UNLOAD" 								text="Unload" />
 		<text name="COURSEPLAY_EDITOR_TURNSTART" 							text="Turn Start" />
-		<text name="COURSEPLAY_EDITOR_TURNEND" 							text="Turn End" />
-		<text name="COURSEPLAY_EDITOR_REVERSE" 							text="Reverse" />
+		<text name="COURSEPLAY_EDITOR_TURNEND" 								text="Turn End" />
+		<text name="COURSEPLAY_EDITOR_REVERSE" 								text="Reverse" />
 
 		<text name="COURSEPLAY_MOUSEARROW_SHOW" 							text="Egérkurzor megjelenítése" />
 		<text name="COURSEPLAY_MOUSEARROW_HIDE" 							text="Egérkurzor elrejtése" />
-		<text name="COURSEPLAY_MOUSE_BUTTON_LEFT" 						 	text="Bal egérgomb" /> <!-- TODO TRANSLATE: -->
-		<text name="COURSEPLAY_MOUSE_BUTTON_RIGHT" 						 	text="Jobb egérgomb" /> <!-- TODO TRANSLATE: -->
-		<text name="COURSEPLAY_MOUSE_BUTTON_MIDDLE"						 	text="Középső egérgomb" /> <!-- TODO TRANSLATE: -->
-		<text name="COURSEPLAY_MOUSE_BUTTON_NR" 					 		text="Egérgomb %d" /> <!-- TODO TRANSLATE: %s = number -->
+		<text name="COURSEPLAY_MOUSE_BUTTON_LEFT" 						 	text="Bal egérgomb" />
+		<text name="COURSEPLAY_MOUSE_BUTTON_RIGHT" 						 	text="Jobb egérgomb" />
+		<text name="COURSEPLAY_MOUSE_BUTTON_MIDDLE"						 	text="Középső egérgomb" />
+		<text name="COURSEPLAY_MOUSE_BUTTON_NR" 					 		text="Egérgomb %d" />
 		<text name="COURSEPLAY_LOAD_COURSE" 						 		text="Útvonal betöltése/hozzáfűzés a betöltött útvonalhoz" />
 		<text name="COURSEPLAY_APPEND_COURSE" 						 		text="Útvonal hozzáadása a végéhez" />
 		<text name="COURSEPLAY_MOVE_TO_FOLDER" 						 		text="Áthelyezés mappába" />
@@ -418,10 +456,10 @@
 		<text name="COURSEPLAY_RELOAD_COURSE_LIST" 							text="Útvonallista újratöltése" />
 		<text name="COURSEPLAY_COULDNT_GENERATE_COURSE" 					text="Útvonalgenerálás sikertelen! Próbálj változtatni a beállításokon vagy állj arréb a járművel!"/>
 		
-		<text name="COURSEPLAY_FillType_BaleTwine" 							text="bála zsineg" /> <!-- TODO TRANSLATION  supply fill types for straw harvest addon-->
-		<text name="COURSEPLAY_FillType_BaleNet" 							text="bála háló" /> <!-- TODO TRANSLATION  supply fill types for straw harvest addon-->
-		<text name="COURSEPLAY_FillType_WrappingFoil" 						text="csomagoló fólia" /> <!-- TODO TRANSLATION  supply fill types for straw harvest addon-->
-		<text name="COURSEPLAY_FillType_Molasses"							text="melasz" /> <!-- TODO TRANSLATION  supply fill types for straw harvest addon-->
+		<text name="COURSEPLAY_FillType_BaleTwine" 							text="bála zsineg" />
+		<text name="COURSEPLAY_FillType_BaleNet" 							text="bála háló" />
+		<text name="COURSEPLAY_FillType_WrappingFoil" 						text="csomagoló fólia" />
+		<text name="COURSEPLAY_FillType_Molasses"							text="melasz" />
 
 		<text name="COURSEPLAY_AUTODRIVE_MODE"				    			text="AutoDrive" />
 		<text name="COURSEPLAY_AUTODRIVE_NO_AUTODRIVE"				    	text="Nincs telepítve" />
