--- a/translations/translation_pt.xml
+++ b/translations/translation_pt.xml
@@ -343,35 +343,73 @@
 		<text name="COURSEPLAY_HUD_OPEN" 									text="Mostrar HUD (Courseplay)" />
 		<text name="COURSEPLAY_HUD_CLOSE" 									text="Ocultar HUD(Courseplay)" />
 		<text name="COURSEPLAY_FUNCTIONS" 									text="Funções do Courseplay" />
-		<text name="input_COURSEPLAY_MODIFIER" 								text="Courseplay: modificador" />
-		<text name="input_COURSEPLAY_MENU_ACCEPT_SECONDARY" 				text="Courseplay: aceitar menu secundário" />
-		<text name="input_COURSEPLAY_HUD" 									text="Mostrar/ocultar HUD Courseplay) " />
-		<text name="input_COURSEPLAY_START_STOP" 							text="Courseplay: conduzir/parar no percurso" />
-		<text name="input_COURSEPLAY_CANCELWAIT" 							text="Courseplay: continuar" />
-		<text name="input_COURSEPLAY_DRIVENOW" 								text="Courseplay: conduzir agora" />
-		<text name="input_COURSEPLAY_STOP_AT_END" 							text="Courseplay: parar no último ponto ou próximo trigger" />
-		<text name="input_COURSEPLAY_NEXTMODE" 								text="Courseplay: modo seguinte" />
-		<text name="input_COURSEPLAY_PREVMODE" 								text="Courseplay: modo anterior" />
-		<text name="input_COURSEPLAY_MOUSEACTION_PRIMARY" 					text="Courseplay: ações do rato" />
-		<text name="input_COURSEPLAY_MOUSEACTION_SECONDARY" 				text="Courseplay: ações secundárias do rato" />
-		<text name="input_COURSEPLAY_DEBUG_MARKER"			 				text="Courseplay: colocar marcador do debug no log" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_LOADING_POSITION" 	   	text="Courseplay: Mover para posição de carregamento" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_TRANSPORT_POSITION" 	text="Courseplay: Mover para posição de transporte" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_PRE_UNLOADING_POSITION"	text="Courseplay: Mover para posição de pré-descarga" />
-		<text name="input_COURSEPLAY_SHOVEL_MOVE_TO_UNLOADING_POSITION" 	text="Courseplay: Mover para posição de descarga" />
+
+		<!--Action Events-->
+		<!--HUD-->
+		<text name="input_COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 				text="Courseplay: open/close HUD" />
+		<text name="input_COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 				text="Courseplay: next mode" />
+		<text name="input_COURSEPLAY_ACTION_PREVIOUS_DRIVER_MODE" 			text="Courseplay: previous mode" />
+		<text name="input_COURSEPLAY_ACTION_NEXT_HUD_PAGE"		 			text="Courseplay: next page" />
+		<text name="input_COURSEPLAY_ACTION_PREVIOUS_HUD_PAGE" 				text="Courseplay: previous page" />
+		<text name="input_COURSEPLAY_ACTION_CHANGE_STARTING_POINT" 			text="Courseplay: change starting point" />
+		<text name="COURSEPLAY_ACTION_OPEN_CLOSE_HUD" 						text="Courseplay: open/close HUD" />
+		<text name="COURSEPLAY_ACTION_NEXT_DRIVER_MODE" 					text="Courseplay: next mode" />
+		<text name="COURSEPLAY_ACTION_PREVIOUS_DRIVER_MODE" 				text="Courseplay: previous mode" />
+		<text name="COURSEPLAY_ACTION_NEXT_HUD_PAGE"		 				text="Courseplay: next page" />
+		<text name="COURSEPLAY_ACTION_PREVIOUS_HUD_PAGE" 					text="Courseplay: previous page" />
+		<text name="COURSEPLAY_ACTION_CHANGE_STARTING_POINT" 				text="Courseplay: change starting point" />
+		<!--Recording/Driving-->
+		<text name="input_COURSEPLAY_ACTION_START_STOP_RECORDING" 			text="Courseplay: start/stop recording" />
+		<text name="input_COURSEPLAY_ACTION_PAUSE_RECORDING" 				text="Courseplay: pause recording" />
+		<text name="input_COURSEPLAY_ACTION_TOGGLE_REVERSE_RECORDING" 		text="Courseplay: toggle reverse recording" />
+		<text name="input_COURSEPLAY_ACTION_START_STOP_DRIVING"				text="Courseplay: start/stop driver" />
+		<text name="input_COURSEPLAY_ACTION_DRIVE_NOW"						text="Courseplay: drive now" />
+		<text name="COURSEPLAY_ACTION_START_STOP_RECORDING" 				text="Courseplay: start/stop recording" />
+		<text name="COURSEPLAY_ACTION_PAUSE_RECORDING" 						text="Courseplay: pause recording" />
+		<text name="COURSEPLAY_ACTION_TOGGLE_REVERSE_RECORDING" 			text="Courseplay: toggle reverse recording" />
+		<text name="COURSEPLAY_ACTION_START_STOP_DRIVING"					text="Courseplay: start/stop driver" />
+		<text name="COURSEPLAY_ACTION_DRIVE_NOW"							text="Courseplay: drive now" />
+		<!--Shovel-->
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_LOADING_POSITION"	text="CP Shovel: Save loading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_LOADING_POSITION"	text="CP Shovel: Move to loading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_TRANSPORT_POSITION"		text="CP Shovel: Save transport position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_TRANSPORT_POSITION"		text="CP Shovel: Move to transport position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_PRE_UNLOADING_POSITION"		text="CP Shovel: Save pre-unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_PRE_UNLOADING_POSITION"		text="CP Shovel: Move pre-unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"	text="CP Shovel: Save unloading position" />
+		<text name="input_COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"	text="CP Shovel: Move to unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_LOADING_POSITION"			text="CP Shovel: Save loading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_LOADING_POSITION"			text="CP Shovel: Move to loading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_TRANSPORT_POSITION"		text="CP Shovel: Save transport position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_TRANSPORT_POSITION"		text="CP Shovel: Move to transport position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_PRE_UNLOADING_POSITION"	text="CP Shovel: Save pre-unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_PRE_UNLOADING_POSITION"	text="CP Shovel: Move pre-unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_SAVE_UNLOADING_POSITION"		text="CP Shovel: Save unloading position" />
+		<text name="COURSEPLAY_ACTION_SHOVEL_MOVE_UNLOADING_POSITION"		text="CP Shovel: Move to unloading position" />
+		<!--Editor-->
+		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Courseplay Editor: Toggle course editor" />
+		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Courseplay Editor: Undo last course edit" />
+		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Courseplay Editor: Save course changes" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Courseplay Editor: Increase waypoint speed" />
+		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Courseplay Editor: Decrease waypoint speed" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Courseplay Editor: Delete waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Courseplay Editor: Delete next waypoint" />  
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Courseplay Editor: Delete all waypoints to start" />
+		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Courseplay Editor: Delete all waypoints to end" />
+		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Courseplay Editor: Insert waypoint" />
+		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Courseplay Editor: Change waypoint type" />
+		<text name="COURSEPLAY_EDITOR_TOGGLE"								text="Courseplay Editor: Toggle course editor" />
+		<text name="COURSEPLAY_EDITOR_UNDO"									text="Courseplay Editor: Undo last course edit" />
+		<text name="COURSEPLAY_EDITOR_SAVE"									text="Courseplay Editor: Save course changes" />
+		<text name="COURSEPLAY_EDITOR_SPEED_INCREASE"						text="Courseplay Editor: Increase waypoint speed" />
+		<text name="COURSEPLAY_EDITOR_SPEED_DECREASE"						text="Courseplay Editor: Decrease waypoint speed" />
+		<text name="COURSEPLAY_EDITOR_DELETE_WAYPOINT"						text="Courseplay Editor: Delete waypoint" />
+		<text name="COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"					text="Courseplay Editor: Delete next waypoint" />  
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_START"						text="Courseplay Editor: Delete all waypoints to start" />
+		<text name="COURSEPLAY_EDITOR_DELETE_TO_END"						text="Courseplay Editor: Delete all waypoints to end" />
+		<text name="COURSEPLAY_EDITOR_INSERT_WAYPOINT"						text="Courseplay Editor: Insert waypoint" />
+		<text name="COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"					text="Courseplay Editor: Change waypoint type" />
 		
-   		<text name="input_COURSEPLAY_EDITOR_TOGGLE"							text="Editor Courseplay: Ativa/desativa editor de percurso" />
-		<text name="input_COURSEPLAY_EDITOR_UNDO"							text="Editor Courseplay: Desfazer a última edição" />
-		<text name="input_COURSEPLAY_EDITOR_SAVE"							text="Editor Courseplay: Guardar mudanças do percurso" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_INCREASE"					text="Editor Courseplay: Aumentar a velocidade do waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_SPEED_DECREASE"					text="Editor Courseplay: Diminuir a velocidade do waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_WAYPOINT"				text="Editor Courseplay: Apagar o waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_NEXT_WAYPOINT"			text="Editor Courseplay: Apagar o próximo waypoint" />  
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_START"				text="Editor Courseplay: Eliminar todos os waypoints desde o começo" />
-		<text name="input_COURSEPLAY_EDITOR_DELETE_TO_END"					text="Editor Courseplay: Eliminar todos os waypoints até ao fim" />
-		<text name="input_COURSEPLAY_EDITOR_INSERT_WAYPOINT"				text="Editor Courseplay: Inserir waypoint" />
-		<text name="input_COURSEPLAY_EDITOR_CYCLE_WAYPOINT_TYPE"			text="Editor Courseplay: Mudar tipo de waypoint" />
-		<text name="input_COURSEPLAY_TOGGLE_FERTILIZER"						text="CP: Fertilizante da plantadeira" />
 		<text name="COURSEPLAY_EDITOR_NORMAL" 							 	text="Normal" />
 		<text name="COURSEPLAY_EDITOR_WAIT" 								text="Espera" />
 		<text name="COURSEPLAY_EDITOR_CROSSING" 							text="Cruzamento" />
